--- a/resources/assets/sass/_booth.scss
+++ b/resources/assets/sass/_booth.scss
@@ -70,6 +70,7 @@
             h4 {
                 color: $gray;
                 font-size: 1.25rem;
+                font-weight: 700;
             }
         }
 
