Misc style optimizations

--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -57,7 +57,7 @@
 
   &__intro {
     padding-right: 130px;
-    font-size: 0.95rem;
+    font-size: 0.9rem;
     max-width: 630px;
   }
 
@@ -125,6 +125,10 @@
   .vote-info {
     h2 {
       font-size: 3rem;
+    }
+
+    &__intro {
+      font-size: 1rem;
     }
 
     &__action a {
