--- a/resources/assets/sass/_booth.scss
+++ b/resources/assets/sass/_booth.scss
@@ -153,7 +153,7 @@
         transform: translateY(0);
         box-shadow: $card-shadow;
         border: 2px darken($gray-lighter, 10%) solid;
-        border-radius: 2px;
+        border-radius: 0.25rem;
         overflow: hidden;
 
         &:hover {
