--- a/resources/assets/sass/_sidebar.scss
+++ b/resources/assets/sass/_sidebar.scss
@@ -34,8 +34,8 @@ $sidebar-text-secondary: lighten($sidebar-text, 15%);
             word-break: break-word;
         }
 
-        .btn-secondary {
-          @include border-radius(0 0 0.25rem 0.25rem); 
+        .btn-lg {
+          @include border-radius(0 0 0.25rem 0.25rem);
         }
 
         &:before {
