Import improvements from altea-participa

--- a/resources/assets/sass/_footer.scss
+++ b/resources/assets/sass/_footer.scss
@@ -1,7 +1,11 @@
-.main-footer {
-  margin-bottom: 5rem;
-  padding-top: 2rem;
+.footer-background {
+  background-color: $body-bg;
   border-top: 1px $gray-lighter solid;
+  padding-top: 2rem;
+}
+
+.main-footer {
+  padding-bottom: 5rem;
 
   .languages {
     background: $white;
