--- a/resources/assets/sass/_booth.scss
+++ b/resources/assets/sass/_booth.scss
@@ -20,7 +20,7 @@
 
 .ballot-block {
   max-width: 600px;
-  margin: 1rem auto;
+  margin: 0 auto 1rem auto;
   border: 4px $brand-success solid;
   padding: 2rem;
   @include border-radius(0.25rem);
