--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -157,7 +157,7 @@
   border: 1px rgba(0, 0, 0, 0.15) solid;
   @include border-radius(0.25rem);
   text-align: center;
-  width: 140px;
+  width: 8.75rem;
 
   &__heading {
     color: $white;
