--- a/resources/assets/sass/_header.scss
+++ b/resources/assets/sass/_header.scss
@@ -96,7 +96,7 @@
     right: -103px;
   }
 
-  &.vote-info--compact {
+  &--compact {
     h2 {
       font-size: 1.5rem;
       padding-right: 110px;
@@ -142,7 +142,7 @@
       font-size: 1.25rem;
     }
 
-    &.vote-info--compact {
+    &--compact {
       h2 {
         font-size: 1.85rem;
         padding-right: 0;
